Updated requirements.txt to something more sane

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,7 @@
-albumentations==1.3.0
-comet_ml==3.32.4
-coremltools==6.2
-cv2==4.5.5
-Flask==2.2.3
-GitPython==3.1.31
-ipython==8.11.0
-matplotlib==3.5.3
-mss==7.0.1
+opencv-python==4.5.5.64
 numpy==1.24.1
-onnx==1.13.1
-onnxruntime==1.14.1
-onnxsim==0.4.17
-openvino==2022.3.0
-paddle==1.0.2
-pafy==0.5.5
-pandas==1.3.5
-Pillow==9.4.0
-psutil==5.9.2
 pycocotools==2.0.6
-PyYAML==6.0
-requests==2.28.1
-scipy==1.10.1
-seaborn==0.11.2
-setuptools==67.6.0
 tensorboardX==2.6
-tensorflow==2.11.0
-tensorflowjs==4.2.0
-tensorrt==8.5.3.1
-tflite_runtime==2.11.0
-tflite_support==0.4.3
-thop==0.0.31.post2005241907
 torch==1.11.0
 torchvision==0.12.0
-tqdm==4.63.1
-tritonclient==2.31.0
 webcolors==1.12
-x2paddle==1.4.0
