--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 opencv-python==4.5.5.64
 numpy==1.24.1
+pandas==1.3.5
+psutil==5.9.2
 pycocotools==2.0.6
+PyYAML==6.0
+seaborn==0.11.2
 tensorboardX==2.6
 torch==1.11.0
 torchvision==0.12.0
+tqdm==4.64.1
 webcolors==1.12
